--- a/Presentation & Plotly.Rmd
+++ b/Presentation & Plotly.Rmd
@@ -7,26 +7,34 @@ output: html_document
 
 ## Peer-graded Assignment: R Markdown Presentation & Plotly
 
-# Instructions
+## Diamond Analysis Report
 
-Create a web page presentation using R Markdown that features a plot created with Plotly. Host your webpage on either GitHub Pages, RPubs, or NeoCities. Your webpage must contain the date that you created the document, and it must contain a plot created with Plotly. We would love to see you show off your creativity!
+Diamond Data Analysis Report enabled developing data products using shiny apps being embeded within RMarkDown.
 
-# Plot
+Using PageUp and PageDown keys all the slides can be traversed.
 
-```{r}
-library(ggplot2)
-library(plotly)
-```
+## Application Overview
 
-```{r}
-library(gapminder)
+- Diamonds Properties can be analysed using several Parameters.
+- Carat,Price,sample size,color Depth are some of the common parameters.
+- This Report enables to pick the right parameters for the best Diamond selection.
 
-p <- gapminder %>%
-  filter(year==1997) %>%
-  ggplot( aes(gdpPercap, lifeExp, size = pop, color=continent)) +
-  geom_point() +
-  theme_bw()
 
-ggplotly(p)
+## Slide with Complete Reporting Appliaction
+
+Click the Below Link for the Application.
+
+....
+
+Click the link below for compiled project files on gitub repo.
+
+.....
+
+## Data Used
+The data used for this application is diamonds data set, which is part of ggplot2 package. Containing information about 53940 diamonds with 10 variables.
+
+```{r, echo=TRUE}
+library("ggplot2")
+head(diamonds)
 ```
 
